# pi-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
docs/: RELEASING.md  USAGE.md
docs/superpowers/specs/: 2026-06-05-pi-agent-v03-design.md  2026-06-12-pi-agent-v04-public-release-design.md  2026-06-12-pi-agent-v05-design.md  2026-06-12-pi-agent-v06-design.md
skills/api-design/: SKILL.md
skills/architecture/: SKILL.md
skills/code-review/: SKILL.md
skills/commit-message/: SKILL.md
skills/data-analysis/: SKILL.md
skills/debug/: SKILL.md
skills/explain-code/: SKILL.md
skills/explain-project/: SKILL.md
skills/fix-ci/: SKILL.md
skills/knowledge-base/: SKILL.md
skills/make-deck/: SKILL.md
skills/orchestrate/: SKILL.md
skills/performance-review/: SKILL.md
skills/planning/: SKILL.md
skills/refactor/: SKILL.md
skills/secure-tools/: SKILL.md
skills/security-review/: SKILL.md
skills/use-mcp/: SKILL.md
skills/write-docs/: SKILL.md
skills/write-readme/: SKILL.md
skills/write-tests/: SKILL.md
src/pi_agent/: __init__.py  agent.py  cli.py  config.py  guardrails.py  kb.py  llm.py  mcp_client.py  repl.py  sandbox.py  skills.py  upload.py
src/pi_agent/tools/: __init__.py  _subprocess.py  base.py  datasci.py  filesystem.py  memory.py  patch.py  planning.py  registry.py  safe_exec.py  search.py  shell.py  subagent.py  vcs.py  web.py
tests/: test_agent.py  test_cli.py  test_datasci.py  test_guardrails.py  test_kb.py  test_mcp_client.py  test_memory.py  test_patch.py  test_planning.py  test_providers.py  test_resilience.py  test_safe_exec.py  test_skills.py  test_tools.py  test_upload.py  test_vcs.py  test_web.py
