[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-agent"
version = "0.1.0"
description = "A minimal terminal AI coding agent (LLM tool-use loop)."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
data = ["pandas>=2.0", "python-pptx>=0.6.21", "openpyxl>=3.1"]
dev = ["pytest>=7.4", "ruff>=0.1"]

[project.scripts]
pi = "pi_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
